# FastGTrack

./: .gitignore  Cargo.toml  DEV_README.md  README.md  android.md  build.rs  patch_lib.js  patch_lib.py  plan.md  run.txt  todo.md
.github/workflows/: android-release.yml
.opencode/skills/android-emulator/: SKILL.md
exercises/: prepare_exercises.py  remove_svg_bg.py
scripts/: build-android-apk.ps1  build-android-apk.sh  download_font.ps1  remove_svg_bg.py
src/: db.rs  lib.rs  main.rs  models.rs  settings.rs  test_slint.rs
ui/: app.slint  components.slint  generated_icons.slint  theme.slint  types.slint
ui/screens/: exercise-screen.slint  home-screen.slint  planner-screen.slint  settings-screen.slint  stats-screen.slint  workout-screen.slint
