[package]
name = "fastgtrack"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
slint = "1.15.1"
thiserror = "2.0.17"

[build-dependencies]
slint-build = "1.15.1"
