[package]
name = "fastgtrack"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
dirs = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = { version = "1.15.1", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "renderer-software", "accessibility", "compat-1-2"] }

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.15.1", default-features = false, features = ["std", "backend-android-activity-06", "renderer-femtovg", "renderer-software", "compat-1-2"] }

[build-dependencies]
slint-build = "1.15.1"

[package.metadata.android]
package = "com.fastgtrack.app"
apk_name = "fastgtrack-debug"
build_targets = ["x86_64-linux-android", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 36

[package.metadata.android.application]
label = "FastGTrack"
theme = "@android:style/Theme.DeviceDefault.NoActionBar"
debuggable = true
extract_native_libs = true

[package.metadata.android.application.activity]
label = "FastGTrack"
orientation = "portrait"
launch_mode = "singleTop"
exported = true
resizeable_activity = true
config_changes = "orientation|keyboardHidden|screenSize|smallestScreenSize|screenLayout|uiMode|density"
